[gd_scene load_steps=12 format=2]

[ext_resource path="res://Juego/naves/player/estela/EstelaPositionInicio.tscn" type="PackedScene" id=1]
[ext_resource path="res://Juego/naves/NaveBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/naves/player/CameraPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Juego/naves/player/laser/laserbeam/LaserBeam2D.tscn" type="PackedScene" id=4]
[ext_resource path="res://Juego/naves/player/AnimacionesPlayer.tscn" type="PackedScene" id=5]
[ext_resource path="res://Juego/naves/player/Motor/motorSFX.tscn" type="PackedScene" id=6]
[ext_resource path="res://Juego/naves/player/materialFisico.tres" type="PhysicsMaterial" id=7]
[ext_resource path="res://Juego/naves/player/Escudo/Escudo.tscn" type="PackedScene" id=8]
[ext_resource path="res://Juego/naves/player/player_orange.png" type="Texture" id=9]
[ext_resource path="res://Juego/naves/player/NavePlayer.gd" type="Script" id=10]

[sub_resource type="CircleShape2D" id=1]
radius = 32.474

[node name="NavePlayer" instance=ExtResource( 2 )]
z_index = 500
z_as_relative = false
collision_layer = 1
collision_mask = 2147483670
physics_material_override = ExtResource( 7 )
contacts_reported = 2
contact_monitor = true
can_sleep = false
linear_damp = 4.5
script = ExtResource( 10 )

[node name="Sprite" parent="." index="0"]
rotation = 1.5708
scale = Vector2( 1, 1 )
z_index = 550
texture = ExtResource( 9 )

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( -2.18563, -1.47895 )
shape = SubResource( 1 )

[node name="PuntoIzquierdo" parent="canion" index="0"]
position = Vector2( 2.0155, -47.221 )

[node name="PuntoDerecho" parent="canion" index="1"]
position = Vector2( 3.16889, 45.2943 )

[node name="Escudo" parent="." index="4" instance=ExtResource( 8 )]

[node name="EstelaPositionInicio" parent="." index="5" instance=ExtResource( 1 )]

[node name="motorSFX" parent="." index="6" instance=ExtResource( 6 )]

[node name="CameraPlayer" parent="." index="7" instance=ExtResource( 3 )]

[node name="AnimationPlayer" parent="." index="8" instance=ExtResource( 5 )]

[node name="LaserBeam2D" parent="." index="9" instance=ExtResource( 4 )]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="canion"]
